tests/ImportTests/data/ImportConstantTest.stderr.expect
./data/ImportConstantTest.xpl:4:15: error: cannot assign to constant
./data/ImportConstantTest.xpl:error: input contains errors
