tests/ImportTests/data/ImportConstantTest.xpl
import test.hello;

string[] main() {
  hello_world = "test";
}
